<resources>
    <string name="app_name">Medicine</string>
    <string name="server_ip" translatable="false">saydaletk.sd/api</string>

    <string name="title_activity_register">Register</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="enter_the_letters" translatable="false">enter the letters</string>
    <string name="prescription">Prescription</string>
    <string name="medicine_name">Medicine name</string>
    <string name="my_orders">Order history</string>
    <string name="no_prescription_attached">No prescription used</string>
    <string name="show_preiscription">Show prescription</string>
    <string name="choose_from_studio">choose from studio</string>
    <string name="take_picture">Use camera</string>
    <string name="No_of_meds">Number of items in prescription :</string>
    <string name="proceed">Proceed</string>
    <string name="search">Search</string>
    <string name="No_of_pharmacies">Number of pharmacies to search :</string>
    <string name="search_range">Search range :</string>
    <string name="use_current_location">Use current location</string>
    <string name="choose_from_map">use map</string>
    <string name="show_location">Show location</string>
    <string name="location_not_detrmined">search location not determined</string>
    <string name="cancel_order">Cancel request</string>
    <string name="order_sent">Order has been sent succesfully\n we will notify you when the order is ready\n Please wait for a while, Searching ...</string>
    <string name="order_details">Order Details</string>
    <string name="recieve_order">Your order is located.\nPlease ensure to collect it within 24 hours from ordering time.</string>
    <string name="pound">SDG</string>
    <string name="total_price">Total price :</string>
    <string name="location">location</string>
    <string name="order_id">Order ID :</string>
    <string name="pharmacy">Pharmacy :</string>
    <string name="logout">logout</string>
    <string name="med_name">medicine name</string>
    <string name="amount">amount</string>
    <string name="product_name">Product name</string>
    <string name="new_requests">Current requests</string>
    <string name="previous_requests">Previous requests</string>
    <string name="no_request_fount">No request found</string>
    <string name="username_or_password">username or phone</string>
    <string name="set_location">Set location</string>
    <string name="Prescription_is_chosen">Prescription is chosen</string>
    <string name="exit">Exit</string>
    <string name="account_deactivated">this account has been deactivated</string>
    <string name="connection_error">connection error</string>
    <string name="wrong_credintials">wrong credintials</string>
    <string name="update">please update your application</string>
    <string name="username_field">please fill username field</string>
    <string name="password_field">please fill password field</string>
    <string name="choose_amount">choose QTY</string>
    <string name="wrong_captcha">wrong captcha</string>
    <string name="phone_field">please enter a valid phone number</string>
    <string name="name_field">please fill name field</string>
    <string name="another_order_is_under_processing">another order is under processing</string>
    <string name="alert">alert</string>
    <string name="ok">ok</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="confirmation">confirmation</string>
    <string name="items_limit">number of items should be equal or less than 8</string>
    <string name="prescription_attached">Prescription attached</string>
    <string name="attaching_error">error while attaching file</string>
    <string name="please_wait">please wait</string>
    <string name="uploading">uploading</string>
    <string name="location_service">please activate GPS to get your location</string>
    <string name="near">Near (2km)</string>
    <string name="medium">medium (5km)</string>
    <string name="far">far (10km)</string>
    <string name="getting_location">getting your location</string>
    <string name="location_found">location is determined</string>
    <string name="searching">searching</string>
    <string name="add_comment">Add Notes</string>
    <string name="no_pharmacies">no pharmacies found in this area</string>
    <string name="prescription_order">prescription</string>
    <string name="normal_order">normal</string>
    <string name="cancelled">cancelled</string>
    <string name="incomplete">no results</string>
    <string name="complete">successful</string>
    <string name="price">Price</string>
    <string name="connecting">Connecting</string>
    <string name="add_new">add new</string>
    <string name="medicine_list">Medicines Order List</string>
    <string name="delete_med">do you want to delete this item ?</string>
    <string name="requested_amount">Enter the requested amount</string>
    <string name="char_limit">please enter at least 3 letters to start the search</string>
    <string name="not_exist">Unlocated</string>
    <string name="search_using">Search using:</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="Continue">Ok</string>
    <string name="Back">Cancel</string>
    <string name="please_confirm">Please confirm ?</string>
    <string name="attach">Attach</string>
    <string name="add_notes_remarks">Add Notes/Remarks</string>
    <string name="please_confirm_to_continue">Please confirm to continue</string>
    <string name="Next">Next</string>
    <string name="order_under_process">Your order is under process</string>
    <string name="change_password">Change Password</string>
    <string name="password_changed">Password Has been Changed Successfully</string>
    <string name="wrong_password">Wrong password</string>
    <string name="refresh">Refresh</string>
    <string name="account_details">Account Information</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">confirm</string>
    <string name="na">n/a</string>
    <string name="title_activity_smsverify">SMSVerify</string>
</resources>
