<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2"
    tools:context="com.example.admin.medicine.change_password">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/old_password"
        android:ems="10"
        android:id="@+id/old_password"
        android:background="@color/edit_blue"
        android:inputType="textPassword"
        android:layout_above="@+id/new_password"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textSize="18dp"
        android:layout_marginBottom="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="18dp"
        android:layout_centerVertical="true"
        android:padding="5dp"
        android:layout_alignStart="@+id/old_password"
        android:background="@color/edit_blue"
        android:id="@+id/new_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        android:ems="10"
        android:padding="5dp"
        android:inputType="textPassword"
        android:textSize="18dp"
        android:layout_below="@+id/new_password"
        android:layout_alignStart="@+id/new_password"
        android:background="@color/edit_blue"
        android:layout_marginTop="36dp"
        android:id="@+id/new_password_again" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:id="@+id/button8"
        android:background="@drawable/button_bg"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:padding="7dp"/>


</RelativeLayout>
