<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_final1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.admin.medicine.Final1"
    android:background="@drawable/bg2">

    <TextView
        android:text="@string/order_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/textView12"
        android:textSize="28dp"
        android:textColor="@color/dark_Blue"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">


        <TextView
            android:text="@string/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/final_order_id_text"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/dark_Blue"
            android:layout_marginTop="9dp"
            />

        <TextView
            android:id="@+id/final_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF000000"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:textSize="22dp"
            android:text=""
            android:background="@drawable/id"
            android:padding="3dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">


        <TextView
            android:text="@string/pharmacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:id="@+id/final_pharmacy_name_text"
            android:textStyle="bold"
            android:textColor="@color/dark_Blue"
            android:layout_marginTop="9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF000000"
            android:textSize="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="9dp"
            android:text=""
            android:id="@+id/final_pharmacy_name"
            android:padding="3dp"/>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="9dp"
        android:textColor="#990000"
        android:textSize="20dp"
        android:text="@string/location"
        android:id="@+id/final_pharmacy_location"
        android:background="@drawable/button_bg"
        android:layout_gravity="center"
        android:padding="8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content">

        <TextView
            android:text="@string/total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/final_price_text"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="@color/dark_Blue"/>

        <TextView
            android:id="@+id/final_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#FF000000"
            android:textSize="22dp"
            android:text="" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="#FF000000"
            android:textSize="22dp"
            android:text="@string/pound"
            android:id="@+id/textView33" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    <ListView
        android:id="@+id/final_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="20dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/final1_progressbar"
            android:visibility="invisible"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/final1_precription"/>

    </RelativeLayout>


    <TextView
        android:text="@string/recieve_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textSize="22dp"
        android:textColor="#FF000000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"/>


</LinearLayout>
