<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.medicine.List"
    android:background="@drawable/bg2">

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="جميع الطلبات"

        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="30dp"
        android:textColor="@color/dark_Blue"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_Blue"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView20"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="20dp"
        android:checked="false"
        android:layoutDirection="rtl"
        android:text="اخفاء الطلبات المكتمله"
        android:textSize="20dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_requests"
            android:background="#000088"
            android:textColor="#FFFFFF"
            android:id="@+id/list_running_requests"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_requests"
            android:layout_weight="1.11"
            android:background="#dddddd"
            android:textColor="#555555"
            android:id="@+id/list_old_requests"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listview"
        android:layout_alignTop="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_alignParentBottom="true"
        android:text="@string/refresh"
        android:textAllCaps="false"
        android:id="@+id/refresh"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_request_fount"
        android:id="@+id/no_current_request"
        android:visibility="visible"/>



</RelativeLayout>
