<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.medicine.Settings"
    android:background="@drawable/bg2"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account_details"
        android:background="@drawable/button_bg"
        android:id="@+id/account_details"
        android:textAllCaps="false"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/return_to_main_menu"
        android:id="@+id/settings_back"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:text="@string/logout"
        android:id="@+id/logout"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>


</LinearLayout>

    <Button
        android:text="En"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/english"
        android:background="#ffffffff"
        android:layout_marginTop="15dp"/>

    <Button
        android:text="ع"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/arabic"
        android:layout_toRightOf="@+id/english"
        android:background="#659EC7"
        android:layout_marginTop="15dp"/>


</RelativeLayout>
