<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="15dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/requested_amount"
        android:textSize="23dp"
        android:textColor="#000000"
        android:layout_marginBottom="15dp"/>
<LinearLayout
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="5"
    android:gravity="center_horizontal">

    <Button
        android:text="-"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/minus"
        android:layout_weight="0.7"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="1"
        android:gravity="center"
        android:layout_weight="1"

        android:ems="10"
        android:id="@+id/quantity" />

    <Button
        android:text="+"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:layout_weight="0.7"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="5">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/Back"
            android:id="@+id/quantity_no"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#ff5555"
            android:padding="7dp"
            android:background="?attr/selectableItemBackground"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:text="@string/Continue"
            android:id="@+id/quantity_yes"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="#ff5555"
            android:padding="7dp"
            android:background="?attr/selectableItemBackground"
            />

    </LinearLayout>
</LinearLayout>